--- a/templates/home/layout1.html
+++ b/templates/home/layout1.html
@@ -63,5 +63,8 @@
         </div>
       {% endfor %}
     </div>
+    <div class="row row3 gus-show-more">
+      <a href="#" class="gus-show-all">Mostrar todas</a>
+    </div>
   </div>
 </div>
